# routes/index.js
@@ -4,6 +4,7 @@ const jobsRoute = require('../components/jobs/jobsAPI');
 const skillsRoute = require('../components/skills/skillsAPI');
 const profileRoute = require('../components/profiles/profilesAPI');
 const commonRoutes = require('../components/commons/commonsAPI');
+const appliedJobsRoutes = require('../components/appliedjobs/appliedjobsAPI');
 const init = (app) => {
 	app.use('/', commonRoutes);
 	app.use('/api/users', usersRoute);
@@ -11,6 +12,7 @@ const init = (app) => {
 	app.use('/api/skills', skillsRoute);
 	app.use('/api/profiles', profileRoute);
 	app.use('/api/profiles', profileRoute);
+	app.use('/api/applied-jobs', appliedJobsRoutes);
 
 	// not found
 	app.all('*', (req, res, next) => {
